--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,48 @@
 asgiref==3.7.2
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==41.0.1
+defusedxml==0.7.1
 Django==3.2.19
+django-filter==22.1
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+Faker==18.11.0
+flake8==5.0.4
+flake8-broken-line==0.6.0
+flake8-isort==6.0.0
+flake8-plugin-utils==1.3.3
+flake8-return==1.2.0
+gunicorn==20.1.0
+idna==3.4
+isort==5.11.4
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mccabe==0.7.0
+oauthlib==3.2.2
+pep8-naming==0.13.3
+Pillow==9.4.0
+psycopg2-binary==2.9.5
+pycodestyle==2.9.1
+pycparser==2.21
+pyflakes==2.5.0
+PyJWT==2.7.0
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+python3-openid==3.2.0
 pytz==2023.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.4.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
+uritemplate==4.1.1
+urllib3==2.0.3
