--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           POSTGRES_DB: django_db
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
+          SECRET_KEY: test-vkz2+p@377_&5v&!278%nz5*snii&79r&hq90*^-cwl8e6wd
         run: |
           python -m flake8 backend/
           cd backend/
