--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,7 +7,7 @@ volumes:
 
 services:
   db:
-    container_name: foodgram-db
+    container_name: foodgram_db
     image: postgres:13
     env_file: .env
     restart: always
@@ -16,7 +16,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data/
   backend:
-    container_name: foodgram-backend
+    container_name: foodgram_backend
     image: nikdubinin/foodgram_backend
     env_file: .env
     restart: always
@@ -26,14 +26,14 @@ services:
     depends_on:
       - db
   frontend:
-    container_name: foodgram-frontend
+    container_name: foodgram_frontend
     image: nikdubinin/foodgram_frontend
     volumes:
       - ./frontend/:/app/result_build/
     depends_on:
       - backend
   gateway:
-    container_name: foodgram-gateway
+    container_name: foodgram_gateway
     image: nginx:1.19.3
     env_file: .env
     restart: always
@@ -43,7 +43,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - ./docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static/
-      - media:/var/html/media/
+      - static:/etc/nginx/html/static/
+      - media:/etc/nginx/html/media/
     depends_on:
       - frontend
