--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+drf-yasg==1.21.7
 Faker==18.11.0
 flake8==5.0.4
 flake8-broken-line==0.6.0
@@ -20,12 +21,14 @@ flake8-plugin-utils==1.3.3
 flake8-return==1.2.0
 gunicorn==20.1.0
 idna==3.4
+inflection==0.5.1
 isort==5.11.4
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
 oauthlib==3.2.2
+packaging==23.1
 pep8-naming==0.13.3
 Pillow==9.4.0
 psycopg2-binary==2.9.5
@@ -37,6 +40,7 @@ python-dateutil==2.8.2
 python-dotenv==0.21.1
 python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
