Fix in serializers and nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,7 @@ server {
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
+        rewrite ^(.*[^/])$ $scheme://$http_host$uri/ permanent;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
