Fix in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,12 +13,14 @@ server {
         root /etc/nginx/html;
     }
 
-    location ~ ^/api/docs/ {
+    location ~* ^/api/docs(/|$) {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+        rewrite ^/api/docs$ $scheme://$http_host$request_uri/ permanent;
     }
 
-    location ~ ^/(api|admin)/ {
+    location ~ ^/(api|admin) {
+        rewrite ^(.*[^/])$ $scheme://$http_host$uri/ permanent;
         proxy_set_header Host $host;
         proxy_pass http://backend:8000;
     }
@@ -26,7 +28,6 @@ server {
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
-        rewrite ^(.*[^/])$ $scheme://$http_host$uri/ permanent;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
